tests/negative/test_dot_data_owning_non_ref.orb
data Foo;

fnc dropFoo (val:Foo::noDrop) ();

data Foo {
    x:i32
}::((drop dropFoo));

fnc dropFoo (val:Foo::noDrop) () {};

data Bar {
    f0:Foo
    f1:Foo
};

fnc bar () Bar {
    sym f:Bar;
    ret (>> f);
};

fnc main () () {
    . (bar) f0;
};